# neural_networks

./: CMakeLists.txt  LICENSE  Perceptron.cpp  Perceptron.h  README.md  main.cpp  test_labels.pt  train_labels.pt  weights.pk  weights2.pk
